fixed missing border

--- a/src/token/Token.css
+++ b/src/token/Token.css
@@ -48,7 +48,10 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    box-shadow: 0px 0px 1px 1px black, inset 0 0 1px 1px black;
+    border: 0.5px solid black;
+    left: -0.5px;
+    top: -0.5px;
+    box-shadow: 0px 0px 0.5px 0.5px black, inset 0px 0px 0.5px 0.5px black;
 }
 
 .TokenName__text {
